--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-    "name": "statki",
-    "type": "module",
-    "scripts": {
-        "build": "next build",
-        "start": "next start",
-        "dev": "next dev --turbopack",
-        "lint": "next lint",
-        "format": "prettier . --write"
-    },
-    "dependencies": {
-        "next": "15.1.2",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
-    },
-    "devDependencies": {
-        "@types/node": "^20.17.10",
-        "@types/react": "^19.0.2",
-        "@types/react-dom": "^19.0.2",
-        "postcss": "^8.4.49",
-        "prettier": "^3.4.2",
-        "prettier-plugin-tailwindcss": "^0.6.9",
-        "tailwindcss": "^3.4.17",
-        "typescript": "^5.7.2"
-    }
+  "name": "statki",
+  "type": "module",
+  "scripts": {
+    "build": "next build",
+    "start": "next start",
+    "dev": "next dev --turbopack",
+    "lint": "next lint",
+    "format": "prettier . --write"
+  },
+  "dependencies": {
+    "lucide-react": "^0.469.0",
+    "next": "15.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.17.10",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
+  }
 }
